Removing gray bar from intro due to weird alignment issues once you use it in production.  Also it seems like Macs render everything larger so problems are worse.  Removing the gray bar is the simplest solution for now since you don't have to pin to the bottom of the container.

--- a/AzureFunctions.Client/styles/dashboard.style.css
+++ b/AzureFunctions.Client/styles/dashboard.style.css
@@ -13,8 +13,3 @@
 .container-full {
     padding: 20px 0px 0px 20px;
 }
-
-/* testing to see if container-full is somehow being overwritten by ibiza */
-.container-full2 {
-    padding: 20px 0px 0px 20px;
-} 
