--- a/AzureFunctions.Client/styles/intro.style.css
+++ b/AzureFunctions.Client/styles/intro.style.css
@@ -1,10 +1,6 @@
 ﻿.intro-container{
     font-family: "Segoe UI Light","Segoe WP Light","Segoe UI","Segoe WP",Tahoma,Arial,sans-serif;
     text-align: center;
-
-    /* Full page height minus top-bar height */
-    height: calc(100% - 40px);
-    min-height: 800px;
 }
 
 .intro-banner{
@@ -66,12 +62,7 @@
 }
 
 .intro-footer{
-    background-color: #C2C5C9;
     padding: 10px 0 25px 0px;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    left: 0;
 }
 
 .intro-footer span{
